# Demeter

./: .flake8  .gitignore  BuildGate0.cmd  CHANGELOG.md  LaunchMetricsServer.cmd  Makefile  README.md  Restore.cmd  Snapshot.cmd  pyproject.bad  pyproject.bad2  pyproject.toml  pyproject.toml.txt  requirements-dev.txt
.github/workflows/: ci.yml
admin/: README.md
artifacts/sbom/: sbom.json  sbom.sig
bench/golden/: answers.jsonl  queries.jsonl
observability/prometheus/: prometheus.yml
policies/: policy.yaml
src/ia_skeleton.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ia_skeleton/ingest/: __init__.py  pipeline.py
src/ia_skeleton/services/: train.py
src/ia_skeleton/services/app/: __init__.py  auth_patch.py  home_patch.py  intent_router.py  logs_event_patch.py  logs_level_patch.py  logs_stream_event_patch.py  logs_stream_level_patch.py  logs_viewer.py  model.py  webui.py
tests/: test_files_preview.py  test_golden_exists.py  test_ingest.py  test_intent_model.py  test_logs.py  test_logs_auth.py  test_logs_auth_precedence.py  test_logs_auth_query.py  test_logs_event_filter.py  test_logs_export.py  test_logs_level_filter.py  test_logs_paging.py  test_logs_params.py  test_logs_stream.py  test_logs_stream_event.py  test_logs_stream_level.py  test_logs_viewer.py  test_logs_viewer_route.py  test_metrics.py  test_policy_yaml.py  test_simulator.py  test_upload.py  test_webui.py
tools/: convert_to_src_layout.ps1  import_local.py  patch_builder_gate0.py  restore.py  run_gonogo.cmd  sbom_gen.py  sbom_sign.py  simulate_offline.py  snapshot.py
(+1 files in other folders)
