[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ia-skeleton"
version = "0.0.2"
description = "Gate0 skeleton + web UI"
requires-python = ">=3.10"
dependencies = [
  "prometheus-client>=0.20.0",
  "opentelemetry-sdk>=1.26.0",
  "opentelemetry-exporter-otlp>=1.26.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "httpx>=0.28.1",
  "datasets>=4.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
